objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AVA__AVAAI_action_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lead requires some action be taken by a rep</description>
        <inlineHelpText>This lead requires some action be taken by a rep</inlineHelpText>
        <label>Conversica Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required_date__c</fullName>
        <description>The date and time it was determined action is required</description>
        <inlineHelpText>The date and time it was determined action is required</inlineHelpText>
        <label>Conversica Action Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_1__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The lead&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_2__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The lead&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage__c</fullName>
        <description>The current stage of the Conversica Conversation</description>
        <inlineHelpText>The current stage of the Conversica Conversation</inlineHelpText>
        <label>Conversation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
        <description>The date and time the current Conversation Stage changed</description>
        <inlineHelpText>The date and time the current Conversation Stage changed</inlineHelpText>
        <label>Conversation Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status__c</fullName>
        <description>The current status of the Conversica Conversation</description>
        <inlineHelpText>The current status of the Conversica Conversation</inlineHelpText>
        <label>Conversation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_date__c</fullName>
        <description>The date and time the current Conversation Status was set</description>
        <inlineHelpText>The date and time the current Conversation Status was set</inlineHelpText>
        <label>Conversation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail__c</fullName>
        <label>Deprecated Conversation Status Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail_date__c</fullName>
        <label>Deprecated Status Detail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status__c</fullName>
        <description>The current status of the lead in Conversica</description>
        <inlineHelpText>The current status of the lead in Conversica</inlineHelpText>
        <label>Conversica Lead Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
        <description>The date and time the current Conversation status was set</description>
        <inlineHelpText>The date and time the current Conversation status was set</inlineHelpText>
        <label>Conversica Lead Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_date_added__c</fullName>
        <description>The date and time Conversica received the lead</description>
        <inlineHelpText>The date and time Conversica received the lead</inlineHelpText>
        <label>Conversica Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_1__c</fullName>
        <description>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_2__c</fullName>
        <description>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</description>
        <inlineHelpText>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</inlineHelpText>
        <label>Conversica Discovered Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_name__c</fullName>
        <description>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</description>
        <inlineHelpText>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</inlineHelpText>
        <label>Conversica Discovered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_first_message_date__c</fullName>
        <description>The date and time Conversica first sent a message to the lead</description>
        <inlineHelpText>The date and time Conversica first sent a message to the lead</inlineHelpText>
        <label>Conversica First Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
        <inlineHelpText>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
        <label>Conversica Further Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action_date__c</fullName>
        <description>Date and time the Lead became a Conversica Further Action lead.</description>
        <inlineHelpText>Date and time the Lead became a Conversica Further Action lead.</inlineHelpText>
        <label>Conversica Further Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead is ready to be contacted by a rep</description>
        <inlineHelpText>The lead is ready to be contacted by a rep</inlineHelpText>
        <label>Conversica Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
        <description>The date and time the lead became &quot;Hot&quot; in Conversica</description>
        <inlineHelpText>The date and time the lead became &quot;Hot&quot; in Conversica</inlineHelpText>
        <label>Conversica Hot Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_message_date__c</fullName>
        <description>The date and time Conversica last sent a message to the lead</description>
        <inlineHelpText>The date and time Conversica last sent a message to the lead</inlineHelpText>
        <label>Conversica Last Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_response_date__c</fullName>
        <description>The date and time Conversica last received a response from the lead</description>
        <inlineHelpText>The date and time Conversica last received a response from the lead</inlineHelpText>
        <label>Conversica Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead may lose interest if not contacted soon by a rep</description>
        <inlineHelpText>The lead may lose interest if not contacted soon by a rep</inlineHelpText>
        <label>Conversica Lead At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk_date__c</fullName>
        <description>The date and time the lead became &quot;At Risk&quot; in Conversica</description>
        <inlineHelpText>The date and time the lead became &quot;At Risk&quot; in Conversica</inlineHelpText>
        <label>Conversica Lead At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_profile__c</fullName>
        <description>A link to the Conversica Lead Profile page for the selected Lead.</description>
        <inlineHelpText>A link to the Conversica Lead Profile page for the selected Lead.</inlineHelpText>
        <label>Conversica Lead Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_options__c</fullName>
        <description>Options field for this object in Conversica</description>
        <inlineHelpText>Options field for this object in Conversica</inlineHelpText>
        <label>Conversica Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Skip to follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_score__c</fullName>
        <description>The Conversica Score of a lead.</description>
        <label>Deprecated Conversica Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
        <inlineHelpText>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
        <label>Conversica SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_status__c</fullName>
        <description>Status of an Conversica lead in the Conversica system</description>
        <label>Deprecated Conversica Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>AVA Stopped</fullName>
                </value>
                <value>
                    <fullName>Client Stopped</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Conversica Stopped</fullName>
                </value>
                <value>
                    <fullName>Preparing Lead</fullName>
                </value>
                <value>
                    <fullName>Sent Engagement</fullName>
                </value>
                <value>
                    <fullName>Sent Appt.</fullName>
                </value>
                <value>
                    <fullName>Sent Feedback</fullName>
                </value>
                <value>
                    <fullName>Sent Social</fullName>
                </value>
                <value>
                    <fullName>Received Engagement</fullName>
                </value>
                <value>
                    <fullName>Received Appt.</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Received Social</fullName>
                </value>
                <value>
                    <fullName>Messaging Complete</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Rep Stopped</fullName>
                </value>
                <value>
                    <fullName>CRM Stopped</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__Campaign__c</fullName>
        <label>Deprecated Conversica Campaign</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Lead_Convert__c</fullName>
        <defaultValue>&quot;YES&quot;</defaultValue>
        <label>Allow_Lead_Convert</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Convert_Lead__c</fullName>
        <formula>OR(
  TEXT(LeadSource)==&quot;Package Installation&quot;,
  TEXT(LeadSource)==&quot;Package Installation - Sandbox&quot;
)</formula>
        <label>Batch Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Relationship_Score__c</fullName>
        <label>Best Relationship Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Best Relationship</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Status_CP__c</fullName>
        <description>The following field writes either &quot;Booked&quot; or &quot;Not Booked&quot; depending on whether a meeting is successfully booked or not. Notes: This field would only be relevant when using &quot;Concierge || Inbound Router&quot;. The value &quot;Booked&quot; will be written when the meeting is booked. The value &quot;Not Booked&quot; will be written based on the timeout (7 min, 10 min, etc) defined in Queues for prospects who didn&apos;t take action within your Router.

*You must have at least 1 queue in the &quot;Queues for prospects who didn&apos;t take action&quot; section of your router for the &quot;Not Booked&quot; value to write to Salesforce. If you have another system that is using this field to route and do not want to have Chili Piper distribute those leads who do not book, you can add a &quot;dummy&quot; queue into this section, with rules that will &quot;never match&quot;. ie RelatedLead.Email = 123.</description>
        <label>Booking Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Created_Date__c</fullName>
        <label>ClickDeploy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Expiry_Date__c</fullName>
        <label>ClickDeploy Enterprise Trial Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClickDeploy Enterprise Trial Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Last_Login_Date__c</fullName>
        <label>ClickDeploy Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_License_Type__c</fullName>
        <label>ClickDeploy License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClickDeploy_Salesforce_Org_Id__c</fullName>
        <label>ClickDeploy Salesforce Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Salesforce_Username__c</fullName>
        <label>ClickDeploy Salesforce Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Deploy_Attempt__c</fullName>
        <label>ClickDeploy Total Deploy Attempt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Deploy_This_Month__c</fullName>
        <label>ClickDeploy Total Deploy This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Success_Deploy_Attempt__c</fullName>
        <label>ClickDeploy Total Success Deploy Attempt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>ClickDeploy User Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2,500</fullName>
                </value>
                <value>
                    <fullName>2,501-5,000</fullName>
                </value>
                <value>
                    <fullName>5,001-7,500</fullName>
                </value>
                <value>
                    <fullName>7,501-10,000</fullName>
                </value>
                <value>
                    <fullName>10,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_made__c</fullName>
        <label># Contacts made</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Alerts__c</fullName>
        <label>Data Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_completion__c</fullName>
        <formula>IF(Data_completion_score__c  &gt;= 70, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;COMPLETE&quot;), 
  IF(Data_completion_score__c  &gt;= 0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;NOT COMPLETED&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;NOT COMPLETED&quot;) ) )</formula>
        <inlineHelpText>This field evaluates the completion of the data. Anything not green is considered as not fully complete.</inlineHelpText>
        <label>Data completion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_completion_score__c</fullName>
        <formula>IF(NOT(ISBLANK( TEXT(Salutation) )),10,0)+
IF(NOT(ISBLANK( FirstName )),10,0)+
IF(NOT(ISBLANK( LastName )),10,0)+
IF(NOT(ISBLANK( Company )),10,0)+
IF(NOT(ISBLANK( Title )),10,0)+
IF(NOT(ISBLANK( Email )),10,0)+
IF(NOT(ISBLANK( Phone )),10,0)+
IF(NOT(ISBLANK( Street )),10,0)+
IF(NOT(ISBLANK( City )),10,0)+
IF(NOT(ISBLANK( State )),10,0)+
IF(NOT(ISBLANK( PostalCode )),10,0)+
IF(NOT(ISBLANK( Country )),10,0)+
IF(NOT(ISBLANK( Website )),10,0)</formula>
        <label>Data completion score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Team_Size__c</fullName>
        <label>Delivery Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_to_bring_over_to_opp__c</fullName>
        <inlineHelpText>don&apos;t put on page layouts</inlineHelpText>
        <label>Description (to bring over to opp)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EBQ_Added__c</fullName>
        <label>EBQ Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Cadence__c</fullName>
        <label>EBQ Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>D5</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>E5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Comments__c</fullName>
        <label>EBQ Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EBQ_Connected__c</fullName>
        <label>EBQ Connected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Date__c</fullName>
        <label>EBQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_First_Touch__c</fullName>
        <label>EBQ First Touch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Next_Step__c</fullName>
        <label>EBQ Next Step</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Rating__c</fullName>
        <label>EBQ Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>86</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Rep2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBQ Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBQ_Touches__c</fullName>
        <formula>CASE( EBQ_Cadence__c,
&quot;A1&quot;, 1,
&quot;A2&quot;, 2,
&quot;A3&quot;, 3,
&quot;A4&quot;, 4,
&quot;A5&quot;, 5,
&quot;B1&quot;, 6,
&quot;B2&quot;, 7,
&quot;B3&quot;, 8,
&quot;B4&quot;, 9,
&quot;B5&quot;, 10,
&quot;C1&quot;, 11,
&quot;C2&quot;, 12,
&quot;C3&quot;, 13,
&quot;C4&quot;, 14,
&quot;C5&quot;, 15,
&quot;D1&quot;, 16,
&quot;D2&quot;, 17,
&quot;D3&quot;, 18,
&quot;D4&quot;, 19,
&quot;D5&quot;, 20,
&quot;E1&quot;, 21,
&quot;E2&quot;, 22,
&quot;E3&quot;, 23,
&quot;E4&quot;, 24,
&quot;E5&quot;, 25,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBQ Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <description>This Field is used for Outreach Integration with SFDC</description>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold / Not Started</fullName>
                </value>
                <value>
                    <fullName>Approaching</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FB_Date_Added__c</fullName>
        <label>FB Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FB_Person_City__c</fullName>
        <label>FB Person City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Country__c</fullName>
        <label>FB Person Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Email__c</fullName>
        <label>FB Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FB_Person_FirstName__c</fullName>
        <label>FB Person FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_LastName__c</fullName>
        <label>FB Person LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Linkedin__c</fullName>
        <label>FB Person Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FB_Person_Role_Description__c</fullName>
        <label>FB Person Role Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FB_Person_State__c</fullName>
        <label>FB Person State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Tenure__c</fullName>
        <label>FB Person Tenure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Tilte__c</fullName>
        <label>FB Person Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Email_Received__c</fullName>
        <label>First Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Email_Sent__c</fullName>
        <label>First Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fortella_Buyer_Persona__c</fullName>
        <inlineHelpText>This persona that Fortella platform standardizes based on job level and function</inlineHelpText>
        <label>Fortella Buyer Persona</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunnelBeam_Enrichment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FunnelBeam Enrichment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_UUID__c</fullName>
        <externalId>true</externalId>
        <label>G2 UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_Buyer_Intent__c</fullName>
        <formula>G2_Event__r.G2Crowd__Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G2 Buyer Intent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Event</label>
        <referenceTo>G2Crowd__G2_Event__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2_Related_Event_Lead_Tag__c</fullName>
        <formula>IF(
FirstName &amp; &apos; &apos; &amp; LastName == G2_Related_Event__r.G2Crowd__Lead__c ,
G2_Related_Event__r.G2Crowd__G2_Event__c,
G2_Related_Event__r.G2Crowd__Lead__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G2 Related Event Lead Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_Related_Event_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Related Event Lead</label>
        <referenceTo>G2Crowd__G2_Related_Event__c</referenceTo>
        <relationshipLabel>Leads (G2 Related Event Lead)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2_Related_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Related Event</label>
        <referenceTo>G2Crowd__G2_Related_Event__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Analytics Tracking ID</description>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
</CustomObject>